添加双重token校验，短时和长期token
